[package]
name = "old-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-utils = { version = "0.2.0", features = ["serde"] }
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["Window", "Document", "HtmlElement", "Node", "Text"] }

wlang = { path = '../wlang', features = ["serde"] }
