[package]
name = "wlang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
logos = "0.13.0"
text-size = "1.1.1"

serde = { version = "1.0.183", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]

[dev-dependencies]
insta = { version = "1.31.0" }

